[gd_scene load_steps=2 format=3 uid="uid://c8x3j9k2m7n5p"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_settings_menu"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 650)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Settings"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Audio"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/MasterVolumeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Master Volume:"
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/MasterVolumeContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/MasterVolumeContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolumeContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Music Volume:"
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXVolumeContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "SFX Volume:"
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Separator2" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NetworkLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Network"

[node name="SignalingServerContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SignalingServerContainer"]
layout_mode = 2
text = "WebRTC Signaling Server URL:"

[node name="SignalingServerLineEdit" type="LineEdit" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SignalingServerContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "ws://localhost:9080"
caret_blink = true

[node name="P2PPortContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/P2PPortContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "P2P Port:"
vertical_alignment = 1

[node name="P2PPortSpinBox" type="SpinBox" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/P2PPortContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
min_value = 1024.0
max_value = 65535.0
value = 5000.0

[node name="VoiceChatContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/VoiceChatContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Enable Voice Chat:"
vertical_alignment = 1

[node name="VoiceChatCheckButton" type="CheckButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/VoiceChatContainer"]
layout_mode = 2
disabled = true
text = "(Coming Soon)"

[node name="Separator3" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SaveButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Save"

[node name="CancelButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Cancel"

[connection signal="value_changed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/SFXVolumeContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="text_changed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/SignalingServerContainer/SignalingServerLineEdit" to="." method="_on_signaling_url_changed"]
[connection signal="value_changed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/P2PPortContainer/P2PPortSpinBox" to="." method="_on_port_changed"]
[connection signal="toggled" from="CenterContainer/Panel/MarginContainer/VBoxContainer/VoiceChatContainer/VoiceChatCheckButton" to="." method="_on_voice_chat_toggled"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonContainer/SaveButton" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_cancel_pressed"]
